[package]
name = "hk-parser"
version = "0.1.0"
authors = ["HackerOS Team <hackeros068@gmail.com>"]
edition = "2021"
license = "MIT"
description = "A robust parser and serializer for Hacker Lang configuration files (.hk)."
readme = "README.md"
repository = "https://github.com/Bytes-Repository/hk-parser.git"
keywords = ["hacker-lang", "parser", "configuration", "hk-format", "hackeros"]
categories = ["parser-implementations", "config"]

[dependencies]
nom = "7.1.3"
nom_locate = "4.2.0"
indexmap = "2.1.0"
thiserror = "1.0"
regex = "1.10.3"
lazy_static = "1.4.0"
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
pretty_assertions = "1.4"

[lib]
name = "hk_parser"
path = "src/lib.rs"
proc-macro = true
