[package]
name = "hk-parser"
version = "0.3.0"
authors = ["HackerOS Team <hackeros068@gmail.com>"]
edition = "2021"
license = "MIT"
description = "A robust parser and serializer for Hacker Lang configuration files (.hk)."
readme = "README.md"
repository = "https://github.com/HackerOS-Linux-System/hk-parser.git"
keywords = ["hacker-lang", "parser", "configuration", "hk-format", "hackeros"]
categories = ["parser-implementations", "config"]

[dependencies]
nom = "7.1.3"
nom_locate = "4.2.0"
indexmap = "2.1.0"
thiserror = "1.0"
regex = "1.10.3"
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
colored = "2.0"
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"

[dev-dependencies]
pretty_assertions = "1.4"

[lib]
name = "hk_parser"
path = "src/lib.rs"
crate-type = ["rlib", "staticlib"]

