[package]
name = "hk-parser"
version = "0.3.1"
authors = ["HackerOS Team <hackeros068@gmail.com>"]
edition = "2021"
license = "MIT"
description = "A robust parser and serializer for HackerOS configuration files (.hk)."
readme = "README.md"
repository = "https://github.com/HackerOS-Linux-System/hk-parser.git"
keywords = ["parser", "configuration", "hk-format", "hackeros"]
categories = ["parser-implementations", "config"]

[dependencies]
indexmap = "2.14.0"
thiserror = "2.0.18"
regex = "1.13.1"
lazy_static = "1.5.0"
colored = "3.1.1"
clap = { version = "4.6.2", features = ["derive"] }
anyhow = "1.0.103"

[dev-dependencies]
pretty_assertions = "1.4.1"

[lib]
name = "hk_parser"
path = "src/lib.rs"
crate-type = ["rlib", "staticlib"]

[[bin]]
name = "hk-parser"
path = "main.rs"

